CHANGES.txt - 04/04/2002
------------------------

CHANGES IN HTMLDOC v1.8.19

    NEW FEATURES

	- Now support the "subject" meta variable.

    CHANGES

	- Updated the HTML parser to use HTML 4.0 rules for
	  embedding elements inside a LI.
	- Now check for a TYPE attribute on EMBED elements, so
	  that embedded Flash files do not get treated as HTML.
	- Now put the COPYRIGHT meta data in the Author field in
	  a PDF file along with the AUTHOR meta data (if any).
	- No longer embed the prolog.ps command header when
	  PostScript commands are not being embedded in the
	  output.

    BUG FIXES

	- Squeezed tables were not centered or right-aligned
	  properly.
	- Cells didn't align properly if they were the first
	  things on the page, or if there were several
	  intervening empty cells.
	- The preferred cell width handling didn't account for
	  the minimum cell width, which could cause some tables
	  to become too large.
	- Remote URLs didn't always resolve properly (like the
	  images from the Google web page...)


CHANGES IN HTMLDOC v1.8.18

    NEW FEATURES

	- Added support for remote HTML title pages.

    CHANGES

	- Now accept all JPEG files, even if they don't start
	  with an APPn marker.
	- Now only start a new page for a chapter/filter if we
	  aren't already at the top of a page.

    BUG FIXES

	- ROWSPAN handling in tables has been updated to match
	  the MSIE behavior, where the current rowspan is
	  reduced by the minimum rowspan in the table; that is,
	  if you use "ROWSPAN=17" for all cells in a row,
	  HTMLDOC now treats this as if you did not use ROWSPAN
	  at all.  It is unclear if this is what the W3C
	  intends.
	- The "--webpage" option didn't force toc levels to 0,
	  which caused a bad page object reference to be
	  inserted in the PDF output file.
	- Background colors in nested tables didn't always get
	  drawn in the right order, resulting in the wrong
	  colors showing through.
	- The HEADER page comment didn't set the correct top