@@ -29,6 +29,8 @@
 	PostScript commands are not being embedded in the
 	output.
 
+	<LI>HTMLDOC now properly ignores the HTML 4.0 COL element.
+
 	<H3>Bug Fixes</H3>
 
 	<LI>Squeezed tables were not centered or right-aligned
